--- a/src/evhtp/thread/CMakeLists.txt
+++ b/src/evhtp/thread/CMakeLists.txt
@@ -1,5 +1,13 @@
 if (NOT EVHTP_DISABLE_EVTHR)
-	set(LIBEVHTP_SOURCES "${LIBEVHTP_SOURCES} evhtp/evhtp_thread.c")
+	message(STATUS 	"threads!!")
+
+	set(LIBEVHTP_SOURCES
+		${LIBEVHTP_SOURCES} "${CMAKE_CURRENT_SOURC_DIR}/evhtp_thread.c")
+
+	message(STATUS ${LIBEVHTP_SOURCES})
+
+	set(LIBEVHTP_EXTERNAL_LIBS
+		${LIBEVHTP_EXTERNAL_LIBS} pthread)
 
 	install(FILES
 		evhtp_thread.h
